--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: ubi
-          image: quay.io/rhtw/ubi:9.2-2
+          image: quay.io/benny12332/test:1.1
           resources:
             requests:
               cpu: 100m
